--- a/lib/libc/string/memmem.3
+++ b/lib/libc/string/memmem.3
@@ -26,7 +26,7 @@
 .\"
 .\" $FreeBSD$
 .\"
-.Dd May 26, 2015
+.Dd December 7, 2015
 .Dt MEMMEM 3
 .Os
 .Sh NAME
@@ -77,8 +77,11 @@ The
 .Fn memmem
 function first appeared in
 .Fx 6.0 .
-.Sh AUTHORS
+It was replaced with an optimized O(n) implementation from the musl libc
+project in
+.Fx 11.0 .
 .An Pascal Gloor Aq Mt pascal.gloor@spale.com
+provided this man page.
 .Sh BUGS
 This function was broken in Linux libc up to and including version 5.0.9
 and in GNU libc prior to version 2.1.
